--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -84,6 +84,7 @@ Once this general flow is written down, you can get back to it several times dur
 
 Deciding which level of detail you want to put in your concept map depends; "simple" applications probably do not need complex maps.
 And that also depends on how precise the specifications are, and how many people are working on the project: the concept map is a valuable tool when it comes to communication, as it allows people involved in the project to have visual clues of the conceptual architecture of the application.
+
 But beware: very complex maps are also unreadable!
 In that case, it might make sense to divide into several concept maps: one with the "big picture", and smaller ones that focus on specific components of your application.
 
@@ -149,6 +150,7 @@ Asking these kinds of questions helps you take a step back from feature implemen
 
 The building of these personas is made easier once you have interacted with the end users, as we suggested in the previous section.
 Given the answers to these questions, you will be able to draw some common characteristics about the future users of your application.
+
 And don't hesitate to detail these fictional characters as "[p]ersonas are considered to be most useful if they are developed as whole characters, described with enough detail for designers and developers to get a feeling of its personality".
 [@Billestrup2014]
 
@@ -158,6 +160,8 @@ From time to time, you are building a `{shiny}` app on top of an existing code-b
 
 These kinds of projects are often referred to as "brownfield projects", in opposition to "greenfield projects", borrowing the terminology from urban planning: **a greenfield project being one where you are building on "evergreen" lands, while a brownfield project is building on lands that were, for example, industrial lands, and which will need to be sanitized, as they potentially contain waste or pollution, constructions need to be destroyed, roads needs to be deviated, and all these things that can make the urban planning process more complex**.
 Then, you can extend this to software engineering, where a greenfield project is the one that you start from scratch, and a brownfield project is one where you need to build on top of an existing code-base, implying that you will need to do some extra work before actually working on the project.
+
+\newpage
 
 > When transforming brownfield projects, we may face significant impediments and problems, especially when no automated testing exists, or when there is a tightly-coupled architecture that prevents small teams from developing, testing, and deploying code independently.
 > 
