--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -13,6 +13,8 @@ Getting things to work before trying to optimize the app is always a good approa
 
 -   **Making things work before working on low-level optimization makes the whole engineering process easier**: having a "minimal viable product" that works, even if slowly and not perfectly, gives a stronger sense of success to the project. For example if you are building a vehicle, it feels more of a success to start with a skateboard than with a wheel: you quickly have a product that can be used to move, not waiting for the end of the project before finally having something useful. Building a skateboard helps the developer maintain a sense of accomplishment throughout the life of the project: the quicker you can have a running program, a MVP (Minimum Viable Product, as seen on Figure \@ref(fig:09-prototyping-1)), the better. 
 
+\newpage
+
 > One of the really nice things about running your program frequently is that you get to see it running, which is fun, ans that's what programming is all about.
 > 
 > _The Unicorn Project_ [@genekim2019]
@@ -22,6 +24,8 @@ Getting things to work before trying to optimize the app is always a good approa
 ```{r 09-prototyping-1, echo=FALSE, fig.cap="(ref:mvp)", out.width="100%"}
 knitr::include_graphics("img/mvp.png")
 ```
+
+\newpage
 
 -   **Abstraction is hard, and makes the codebase harder to work with**. You have heard a lot that if you are copying and pasting something more than twice, you should write a function. And with `{shiny}`, if you are writing a piece of the app more than twice, you should write modules. But while these kinds of abstractions are elegant and optimized, they can make the software harder to work on while building it. So before focusing on turning something into a function, make it work first. As said in *R for Data Science* [@hadleywickham2017] about abstraction with `{purrr}` [@R-purrr]:
 
