--- a/14-when_optimize.Rmd
+++ b/14-when_optimize.Rmd
@@ -17,7 +17,6 @@ But beware!
 As Donald Knuth puts it "Premature optimization is the root of all evil".
 What does that mean?
 That **focusing on optimizing small portions of your app before making it work fully is the best way to lose time along the way, even more in the context of a production application, where there are deadlines and a limited amount of time to build the application**.
-
 Why?
 Here is the general idea: let's say the schema in Figure \@ref(fig:14-when-optimize-1) represents your software, and its goal is to make things travel from *X1* to *X2*, but you have a bottleneck at *U*.
 You are building elements piece by piece: first, the portion `X1.1` of the "road", then `X1.2`, etc.
@@ -39,6 +38,8 @@ And, maybe you have been using an example dataset so that you do not have to que
 This is something you will discover only when the application is fully functional, not when building the parts, and realizing that when you only have 5% of the allocated time for this project left on your calendar is not a good surprise.
 
 Or to sum up:
+
+\newpage
 
 > Get your design right with an un-optimized, slow, memory-intensive implementation before you try to tune.
 > Then, tune systematically, looking for the places where you can buy big performance wins with the smallest possible increases in local complexity.
@@ -75,6 +76,7 @@ Yet you will only realize that once the application is up and running!
 
 As said in the last section, every piece of code can be rewritten to be faster, either from R to R or using a lower-level language: for example C or C++.
 You can also rebuild data manipulation code switching from one package to another, or use a complex data structures to optimize memory usage, etc.
+
 But that comes with a price: **not keeping things simple for the sake of local optimization makes maintenance harder, even more if you are using a lesser-known language/package**.
 Refactoring a piece of code is better done when you keep in mind that "the primary goal should be to produce human-friendly code, even at the cost of your original design. If the laser focus is on the solution rather than the process, there's a greater chance your application will end up more contrived and complicated than it was in the first place" [@lemaire2020].
 
@@ -115,6 +117,7 @@ benched
 However, how much is a time gain worth if you are not sure you can get someone on your team to take over the maintenance if needed?
 In other words, given that (in our example) we are gaining around `r benched$median[1] - benched$median[2]` on the execution time of our function, is it worth switching to C++?
 Using external languages or complex data structures implies that from the start, you will need to think about who and how your codebase will be maintained over the years.
+
 Chances are that if you plan on using a `{shiny}` application during a span of several years, various R developers will be working on the project, and including C++ code inside your application means that these future developers will either be required to know C++, or they will not be able to maintain this piece of code.
 
 So, to sum up, there are three ways to optimize your application and R code, and the bad news is that you cannot optimize for all of them:
@@ -124,6 +127,8 @@ So, to sum up, there are three ways to optimize your application and R code, and
 -   Optimizing for readability/maintainability
 
 Leading a successful project means that you should, as much as possible, find the perfect balance between these three.
+
+\newpage
 
 ## Tools for profiling
 
