--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -637,6 +637,8 @@ And bonus, once the app is closed, you can get a list of all the "counters" with
 knitr::include_graphics("img/plot_whereami.png")
 ```
 
+\newpage
+
 ## R does too much
 
 ### Rendering the UI from the server side
