--- a/17-javascript.Rmd
+++ b/17-javascript.Rmd
@@ -12,7 +12,7 @@ Even more when you can use a lot of tools that already bundle JavaScript functio
 We chose to include this chapter in this book as it will help you get a better understanding on how `{shiny}` works at its core, and show you that getting at ease with JavaScript can help you get better at building web applications using R in the long run.
 It can also help you extend `{shiny}` with other JavaScript libraries, for example, using `{htmlwidgets}` [@R-htmlwidgets], when you get better at writing JavaScript.
 
-That being said, note also that every inclusion of external JavaScript code or library can present a security risk for your application, so don't include code you don't know/understand in your application unless you are sure of what you are doing.
+That being said, note also that every inclusion of external JavaScript code or library can present a security risk for your application, so don't include code you don't know/understand in your application unless you are sure of what you are doing. 
 As a rule of thumb, always go for an existing and tested solution when you need JavaScript widgets/functionalities, instead of trying to implement them yourself.
 
 ## Introduction
@@ -71,7 +71,9 @@ In this chapter, we will first review some JavaScript basics which can be used "
 Then, we will talk about making R and JS communicate with each other, and explore some common patterns for JavaScript in `{shiny}`.
 Finally, we will quickly present some of the functions available in `{golem}` [@R-golem] that can be used to launch JavaScript.
 
-*Note that this chapter does not try to be a comprehensive JavaScript course. External resources are linked all throughout this chapter and at the end if you want to dive deeper into JavaScript.*
+*Note that this chapter does not try to be a comprehensive JavaScript course. External resources are linked all throughout this chapter and at the end.*
+
+\newpage
 
 ## A quick introduction to JavaScript
 
