--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -136,8 +136,8 @@ Note also that this folder must not contain any sub-folders.
 #' and in the config file. For a safer name change mechanism, 
 #' use the `golem::set_golem_name()` function.
 #' 
-#' @param ... character vectors, specifying subdirectory and file(s) 
-#' within your package. 
+#' @param ... character vectors, specifying subdirectory 
+#' and file(s) within your package. 
 #' The default, none, returns the root of the app.
 #' 
 #' @noRd
@@ -242,7 +242,8 @@ If you're tempted to do that, be aware that `fluidPage()` comes with a series of
 #' resources inside the Shiny application. 
 #' 
 #' @import shiny
-#' @importFrom golem add_resource_path activate_js favicon bundle_resources
+#' @importFrom golem add_resource_path activate_js 
+#' @importFrom golem favicon bundle_resources
 #' @noRd
 golem_add_external_resources <- function(){
   
