--- a/index.Rmd
+++ b/index.Rmd
@@ -69,6 +69,8 @@ margin-right: 1em;
 
 `r if (knitr::is_html_output()) '
 This book will soon be available in print, published in the [R Series](https://www.crcpress.com/go/the-r-series) by Chapman & Hall.
+
+The online version of this book is free to read here (thanks to Chapman & Hall/CRC), and licensed under the [Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License](https://creativecommons.org/licenses/by-nc-sa/4.0/).
 '`
 
 ## Motivation {-}
