--- a/17-javascript.Rmd
+++ b/17-javascript.Rmd
@@ -332,7 +332,7 @@ output$ui <- renderUI({
 
 -   `$("#id").remove();`, or in vanilla JavaScript `var elem = document.querySelector('#some-element'); elem.parentNode.removeChild(elem);` completely removes the element from the DOM. It can be used as a replacement for `shiny::removeUI()`, or as a conditional UI. Note that this code doesn't remove the input values on the server side: the elements only disappear from the UI, but nothing is sent to the server side. For a safe implementation, see `{shinyjs}`.
 
-### Where to put them: back to JavaScript Events
+### Where to put them: Back to JavaScript Events
 
 OK, now that we have some ideas about JS code that can be used in `{shiny}`, where do we put it?
 HTML and JS have a concept called `events`, which are, well, events that happen when the user manipulates the web page: when the user clicks, hovers (the mouse goes over an element), presses keys on the keyboard, etc.
@@ -669,7 +669,7 @@ mod_my_first_module_server <- function(input, output, session){
 }
 ```
 
-## About `{shinyjs}` js functions
+## About `{shinyjs}` JS functions
 
 As said in the introduction to this chapter, running JavaScript code that you don't fully control/understand can be tricky and might open doors for external attacks.
 In many cases, for the most common JavaScript manipulations, it's safer to go for a package that has already been proved efficient: `{shinyjs}`.
