--- a/14-when_optimize.Rmd
+++ b/14-when_optimize.Rmd
@@ -355,7 +355,7 @@ Note that you can also install a command-line tool with `npm install -g lighthou
 
 [^when_optimize-5]: Being a NodeJS application, you will need to have NodeJS installed on your machine.
 
-(ref:lighthouseaudit) Launching LightHouse audit from Google Chrome.
+(ref:lighthouseaudit) Launching Lighthouse audit from Google Chrome.
 
 ```{r 14-when-optimize-11, echo=FALSE, fig.cap="(ref:lighthouseaudit)", out.width="100%"}
 knitr::include_graphics("img/lighthouse-audit.png")
@@ -607,7 +607,7 @@ Here is what it can look like inside a `Dockerfile` (Note that you will need to 
         minifyr_npm_install(TRUE);\
         minify_package_js("cicerone", minifyr_js_uglify)'
 
-### More resources about web page performance
+### More resources about web-page performance
 
 -   [Why Performance Matters - Google Web Fundamentals](https://developers.google.com/web/fundamentals/performance/why-performance-matters)
 
