--- a/08-step-by-step-prototype.Rmd
+++ b/08-step-by-step-prototype.Rmd
@@ -1,6 +1,6 @@
 # (PART) Step 2: Prototype {.unnumbered}
 
-# Setting Up for Success with `{golem}` {#setting-up-for-success}
+# Setting up for Success with `{golem}` {#setting-up-for-success}
 
 Before starting to prototype and build anything, initialize a `{golem}` [@R-golem] project!
 This will help you start your application on solid ground, and once the project is ready to be filled, you can start prototyping right inside it.
@@ -178,7 +178,7 @@ Note that to avoid making errors when putting these into your app, the end of th
 This is where you will be adding the core of your app.
 The first time, these modules will contain prototyped UI for the application, and once the application is ready to be integrated, you will add the core logic here.
 
-### Add CSS and JS Files
+### Add CSS and JS files
 
 Adding some infrastructure for JavaScript and CSS files from the very beginning can also formalize the set-up: you are giving the rest of your team a specific file where they can write the JavaScript and CSS code.
 
