--- a/00-app-presentation.Rmd
+++ b/00-app-presentation.Rmd
@@ -2,7 +2,7 @@
 
 As a long-time R user (since Version `2.0.0` back in 2004), I have seen more than a few "game-changing" advancements which transformed my entire workflow and opened the doors to new possibilities I never imagined.
 One of those came in late 2012 when RStudio released `{shiny}` to the R community.
-I was absolutely floored by the very notion that I could create not just a web interface, but a dynamic web interface all through R code!
+I was absolutely floored by the very notion that I could create not just a web interface, but a dynamic web interface, all through R code!
 To give a little perspective, the only web interfaces I had built before Shiny were very utilitarian PHP-powered sites with a MySQL database back-end to summarize local state parks data near my graduate school's location, and let's just say those projects would not win any awards for web design!
 
 I certainly experienced the longtime adage of learning the hard way as I began to create Shiny apps at my day job and for personal projects.
@@ -23,8 +23,8 @@ You will find many nuggets of wisdom sprinkled throughout these chapters.
 It's very hard to pick favorites, but certainly one that felt like a moment of enlightenment was the concept of building triggers and watchers to define your own patterns of object invalidation.
 Now I use that technique in every app I create!
 Of course, one of the key pillars holding the foundation of this book is the [`{golem}`](https://thinkr-open.github.io/golem) package, and I have found that the time I invested to learn the ins and outs of creating applications with `{golem}` has paid off significantly for creating my complex applications, especially with multi-person development teams.
-As I was finishing my writing of this forward, my four-year-old son asked me, "why does `{golem}` create nice things Daddy?" Well, this book is easily the best way to explain that answer!
-I hope reading *Engineering Production-Grade Shiny Apps* helps you in your journey of creating large Shiny applications!
+As I was finishing my writing of this Foreword, my four-year-old son asked me, "Why does `{golem}` create nice things, Daddy?" Well, this book is easily the best way to explain that answer!
+I hope reading *Engineering Production-Grade Shiny Apps* helps you on your journey to creating large Shiny applications!
 
 > Eric Nantz - Host of the R-Podcast and the Shiny Developer Series
 
@@ -36,7 +36,7 @@ This book uses a series of applications as examples.
 ## `{hexmake}` {.unnumbered}
 
 `{hexmake}` is an application that has been designed to build hex logos.
-It's been built by Colin, and it serves two main purposes: it helps the creation of a logo, but mainly it serves as an example of some complex features you can use inside a `{shiny}` application (image manipulation, custom CSS, linking to an external database, save and restore, etc.).
+It was built by Colin, and it serves two main purposes: it helps the creation of a logo, but mainly it serves as an example of some complex features you can use inside a `{shiny}` application (image manipulation, custom CSS, linking to an external database, save and restore, etc.).
 
 Figure \@ref(fig:00-app-presentation-1) is a screenshot of this application.
 
@@ -53,7 +53,7 @@ The code is available at [github.com/ColinFay/hexmake](https://github.com/ColinF
 ## `{tidytuesday201942}` {.unnumbered}
 
 `{tidytuesday201942}` is an application using the dataset from week 42 of `tidytuesday` 2019.
-It's been built by Colin, and it serves as an example of an app built from scratch using bootstrap 4.
+It was built by Colin, and it serves as an example of an app built from scratch using bootstrap 4.
 
 Figure \@ref(fig:00-app-presentation-2) is a screenshot of this application.
 
@@ -69,8 +69,8 @@ The code is available at [github.com/ColinFay/tidytuesday201942](https://github.
 
 ## `{minifying}` {.unnumbered}
 
-`{minifying}` is an application to minify CSS, JavaScript, HTML and JSON files.
-It's been built by Colin as a use case for the workflow of this book.
+`{minifying}` is an application to minify CSS, JavaScript, HTML, and JSON files.
+It was built built by Colin as a use case for the workflow of this book.
 You will find the details of how this app was constructed in the Appendix, "*Use case: Building an App, from Start to Finish*".
 
 Figure \@ref(fig:00-app-presentation-3) is a screenshot of this application.
@@ -92,7 +92,7 @@ The code is available at [github.com/ColinFay/minifying](https://github.com/Coli
 
 -   `{databasedemo}` is an application built by Cervan using an external database, available at [engineering-shiny.org/databasedemo/](https://engineering-shiny.org/databasedemo/).
 
--   `{graysacle}` is an application built by Cervan using an external html template, available at [engineering-shiny.org/graysacle/](https://engineering-shiny.org/graysacle/).
+-   `{grayscale}` is an application built by Cervan using an external html template, available at [engineering-shiny.org/grayscale/](https://engineering-shiny.org/grayscale/).
 
 -   `{bs4dashdemo}` is an application built by Cervan with the `{bs4dash}` package, available at [engineering-shiny.org/bs4dashdemo/](https://engineering-shiny.org/bs4dashdemo/).
 
