--- a/latex/before_body.tex
+++ b/latex/before_body.tex
@@ -16,7 +16,7 @@ who still think we fix printers and broken WiFi.
 \begin{center}
 To Diane,
 
-Thank you for always believing in us.
+thank you for always believing in us.
 %\includegraphics{images/dedication.pdf}
 \end{center}
 
