--- a/index.Rmd
+++ b/index.Rmd
@@ -25,7 +25,8 @@ knitr::opts_chunk$set(
   cache = TRUE,
   fig.align = "center", 
   tidy = 'grkstyle::grk_style_transformer', 
-  tidy.opts=list(width.cutoff=10)
+  tidy.opts=list(width.cutoff=10), 
+  eval = TRUE
 )
 
 options(
@@ -97,20 +98,20 @@ This book will then be of interest to two groups:
 This group will find relevant content in the first 1/3 of this book (roughly until Chapter \@ref(workflow)).
 
 + Developers who want to cover medium to advanced `{shiny}` topics that will be relevant to production.
-This group will be more interested in the rest of the book, which roughly spans from Chapter \@ref(matters) to the end.
+This group will be more interested in the rest of the book, which roughly spans from Chapter \@ref(ux-matters) to the end.
 Note that the technical elements covered in this book range from intermediate to advanced topics, and we hope that you will find relevant topics for your current goals, whatever your level is.
 
-In practice, we've come to realize that a lot of `{shiny}` projects are built by small team with a large number of these "teams" being composed of only one developer. 
-In this context, we have realized that project management and development are often assigned to the very same person,^[Even if there are several developers in the team, the project manager is also involved in the coding process] making these two skills deeply integrated when carrying production projects. 
+In practice, we've come to realize that a lot of `{shiny}` projects are built by small teams with a large number of these "teams" being composed of only one developer. 
+In this context, we have realized that project management and development are often assigned to the very same person,^[Even if there are several developers on the team, the project manager is also involved in the coding process.] making these two skills deeply integrated when carrying production projects. 
 
-That's why this book tries to reconcile both these worlds, as building production-grade software needs a reliable and operational code-base which is made possible by having solid technical skills, but also reliable and operational team-work and project management.
+That's why this book tries to reconcile both these worlds, as building production-grade software needs a reliable and operational code-base which is made possible by having solid technical skills, but also reliable and operational team work and project management.
 
 ## What is "production"? {-}
 
 All throughout this book, we will be using the term "production" to refer to the way we build and deploy our application. 
 But what is "production"? 
 
-There have been a lot of definition of what is production, and even today if you ask around you will get a wide range of different answers. 
+There have been a lot of definitions of what production is, and even today if you ask around you will get a wide range of different answers. 
 We like to think that a piece of software is in production when it combines the three following properties, not only for the users, but also the engineers working on it: 
 
 + It is __used__, even if only by one person.
@@ -119,25 +120,25 @@ We like to think that a piece of software is in production when it combines the 
 
 + It has __real life impact__ if something goes wrong.
 
-These three properties impact two specific groups: users, and the developers. 
+These three properties impact two specific groups: users and the developers. 
 
-Indeed, the users rely on the app to work, so that they can do their job, and expect it to deliver meaningful results that they can count on. 
+Indeed, the users rely on the app to work so that they can do their job, and expect it to deliver meaningful results that they can count on. 
 From the engineering point of view, a production-grade software can be relied upon in the sense that developers count on it to run as expected, and they need to rely on the software to be resilient to change, _i.e_ to be modular, documented, and strongly tested so that changes can be integrated with confidence. 
 
-A production software also has real-life impact if something goes wrong: users will make wrong decisions, they might be unable to do their day-to-day work, and all the things that can happen when the software you use on a daily basis fails to run. 
+A production software also has real-life impact if something goes wrong: users will make wrong decisions, they might be unable to do their day-to-day work, and there are all the things that can happen when the software you use on a daily basis fails to run. 
 From the engineering point of view, a production-grade software has real impact when something goes wrong: someone has to fix the bug, the company selling the software might lose money, data can be lost, and so on. 
 
 Given these two properties, you can understand why being in production doesn't necessarily mean being served to gazillions of users,^[
 "Production" being equal to tons of users is a definition we regularly hear.
 ] and serving trillions of gigabytes of data: even software that is used by one person who relies on this application to do their job is a production software. 
 
-This is what this book is about: building `{shiny}` applications that can be used, on which you and your users can rely, and including all the tools that will help you prevent thing from going wrong, and when they eventually do, being equipped to quickly fix the bugs. 
+This is what this book is about: building `{shiny}` applications that can be used, on which you and your users can rely, and including all the tools that will help you prevent things from going wrong, and when they eventually do, making sure you are equipped to quickly fix the bugs. 
 
 ## Book structure {-}
 
-+ Part 1, "Building Successful `{shiny}` apps" gives a __general context for what we mean by "production-grade" and "successful" `{shiny}` application, and what challenges arise when you are dealing with a large-scale application designed for production__. 
++ Part 1, "Building Successful `{shiny}` Apps" gives a __general context for what we mean by "production-grade" and "successful" `{shiny}` applications, and what challenges arise when you are dealing with a large-scale application designed for production__. 
 In this part, we will define what we mean by "Successful", stress the importance of project management, develop how to structure your project for production, and introduce the `{golem}` [@R-golem] package.
-We will finally briefly introduce to our development workflow: a workflow that will be explored in Parts 2 to 6.
+We will finally, briefly introduce to our development workflow: a workflow that will be explored in Parts 2 to 6.
 
 + Part 2 through 6 __explore the workflow for building successful applications__.  
 _Part 2: Design_ (Step 1) underlines the centrality of the user experience when engineering an application, and emphasizes the importance of designing before coding.  
@@ -156,11 +157,11 @@ This part ends with a gentle introduction to CSS (Cascading Style Sheets).
 
 Colin has written the vast majority of this book. He's responsible for its general structure, and for the original design of the workflow described. Most of the time (if not every time) "we" actually refers to him. He is the lead developer of the `{golem}` framework, and creator of many tools described in this book. 
 
-Colin works at ThinkR, a French agency focused on everything R-related. During the day, he helps companies to take full advantage of the power of R, by building tools (packages, web apps, etc.) and setting up infrastructure. His main areas of expertise are data & software engineering, infrastructure, web applications (front-end and back-end), and R in production. 
+Colin works at ThinkR, a French agency focused on everything R related. During the day, he helps companies to take full advantage of the power of R, by building tools (packages, web apps, etc.) and setting up infrastructure. His main areas of expertise are data and software engineering, infrastructure, web applications (front-end and back-end), and R in production. 
 
-During the night, Colin is also a hyperactive open source developer and an open data advocate. You can find a lot of his work on his GitHub account (https://github.com/ColinFay) and on ThinkR's account (https://github.com/thinkr-open).
+During the night, Colin is also a hyperactive open-source developer and an open-data advocate. You can find a lot of his work on his GitHub account (https://github.com/ColinFay) and on ThinkR's account (https://github.com/thinkr-open).
 
-He is also active in the R & Data community, and an international speaker.
+He is also active in the R and Data community, and is an international speaker.
 
 ### <a href="https://statnmap.com/">Sébastien Rochette</a> {-}
 
@@ -174,14 +175,14 @@ Sébastien is a data scientist at ThinkR, where he teaches anything R related fr
 Vincent is the founder of ThinkR. He created the first proof-of-concept framework for `{shiny}` applications inside packages; an idea which has led to the creation of `{golem}`. 
 If you feel like a GitHub archaeologist, this very first version is still available with a little bit of exploration!
 
-With more than 10 years of experience with R, and a scientific and technical background, Vincent is an R enthusiast. 
+With more than ten years of experience with R, and a scientific and technical background, Vincent is an R enthusiast. 
 He still has his hands in the code, whether to develop applications, analyze data, or build packages. 
 When he’s not coding, he plays with Docker and manages servers.
 He strongly believes that meeting highly technical challenges is not incompatible with pedagogy: he passionately trains very diverse learner profiles in R.
 
 ### <a href="https://twitter.com/CervanGirard">Cervan Girard</a> {-}
 
-Cervan has worked on some of the example applications that are used inside this book, namely `{shinipsumdemo}`, `{databasedemo}`, `{graysacle}`, `{bs4dashdemo}`, and `{shinyfuture}`.
+Cervan has worked on some of the example applications that are used inside this book, namely `{shinipsumdemo}`, `{databasedemo}`, `{grayscale}`, `{bs4dashdemo}`, and `{shinyfuture}`.
 
 Cervan is a Data Scientist at ThinkR. 
 He is enthusiastic and motivated when it comes to rolling up his sleeves for new challenges, even if it means venturing dangerously into the depths of R, learning new languages, and experimenting outside your comfort zone.
@@ -197,7 +198,7 @@ But good news!
 __A large portion of this book is about the methodology, and not purely the technology__, so even if some of the packages and code sections used in this book can (and will) become obsolete, a significant part of what is described in this book will still be relevant. 
 
 When reading this book, remember that they are a "snapshot" of various technologies and packages, which might someday become out of date, have breaking changes, or even disappear.
-The last revisions of the pages you're reading now have been done on the `r format(Sys.Date(), format="%B %d, %Y")`.
+The last revisions of the pages you're reading now have been done on `r format(Sys.Date(), format="%B %d, %Y")`.
 We will __try to update the online version whenever changes are made to the packages used in this book__, so feel free to browse the online version^[Available at <https://engineering-shiny.org>.] for up-to-date information.
 
 ## Software information and conventions {-}
@@ -239,6 +240,7 @@ You can also find more resources in the bibliography.
 + [Learn Shiny with RStudio](https://shiny.rstudio.com/tutorial/)
 + [Getting Started with Shiny](https://ourcodingclub.github.io/2017/03/07/shiny.html)
 + [A gRadual intRoduction to Shiny](https://laderast.github.io/gradual_shiny/)
++ [Shiny From Start To Finish](https://github.com/rstudio-conf-2020/shiny-start-finish)
 
 ### Putting `{shiny}` into production  {-}
 
@@ -254,14 +256,14 @@ Feel free to [suggest a resource](https://github.com/ThinkR-open/building-shiny-
 We want to thank ThinkR for allowing us time to write this book, and for always being supportive during the project. 
 
 Colin wants to personally thank [Christophe Dervieux](https://twitter.com/chrisderv) for all his help with this book and any other projects, and for being such an awesome person. 
-He also wants to thank [Eric Nantz](https://r-podcast.org/) for taking the time to write the foreword, for being one of the first `{golem}` adopters, and for always being enthusiastic about all things gravitating around the `golemverse`. 
+He also wants to thank [Eric Nantz](https://r-podcast.org/) for taking the time to write the Foreword, for being one of the first `{golem}` adopters, and for always being enthusiastic about all things gravitating around the `golemverse`. 
 A big thanks also to [David Granjon](https://divadnojnarg.github.io/) for his precious feedback on this book. 
 
 ### Contributors to this book {-}
 
-We want to thank all the people that have contributed to this book, either via Pull Requests, Issues on the book GitHub Repository, or via direct conversation.
+We want to thank all the people that have contributed to this book, either via Pull Requests, Issues on the book's GitHub repository, or via direct conversation.
 
-[&#x0040;aicesan](https://github.com/aicesan), [&#x0040;allaway](https://github.com/allaway), [&#x0040;andreferraribr](https://github.com/andreferraribr), [&#x0040;ardeeshany](https://github.com/ardeeshany), [&#x0040;aronolof](https://github.com/aronolof), [&#x0040;BenjaminLouis](https://github.com/BenjaminLouis), [&#x0040;bstrain71](https://github.com/bstrain71), [&#x0040;cedricbriandgithub](https://github.com/cedricbriandgithub), [&#x0040;coreyyanofsky](https://github.com/coreyyanofsky), [&#x0040;dA505819](https://github.com/dA505819), [&#x0040;dan-reznik](https://github.com/dan-reznik), [&#x0040;davidpb90](https://github.com/davidpb90), [&#x0040;denrou](https://github.com/denrou), [&#x0040;Dschaykib](https://github.com/Dschaykib), [&#x0040;ehesch](https://github.com/ehesch), [&#x0040;eroten](https://github.com/eroten), [&#x0040;espinielli](https://github.com/espinielli), [&#x0040;etiennebacher](https://github.com/etiennebacher), [&#x0040;fBedecarrats](https://github.com/fBedecarrats), [&#x0040;flrd](https://github.com/flrd), [&#x0040;frankschmitt](https://github.com/frankschmitt), [&#x0040;FrieseWoudloper](https://github.com/FrieseWoudloper), [&#x0040;giocomai](https://github.com/giocomai), [&#x0040;gowachin](https://github.com/gowachin), [&#x0040;graue70](https://github.com/graue70), [&#x0040;Guillaume-Lombardo](https://github.com/Guillaume-Lombardo), [&#x0040;gwd999](https://github.com/gwd999), [&#x0040;hadley](https://github.com/hadley), [&#x0040;hsm207](https://github.com/hsm207), [&#x0040;jamespooley](https://github.com/jamespooley), [&#x0040;jcrodriguez1989](https://github.com/jcrodriguez1989), [&#x0040;jonmcalder](https://github.com/jonmcalder), [&#x0040;josbop](https://github.com/josbop), [&#x0040;jpmarindiaz](https://github.com/jpmarindiaz), [&#x0040;jtelleriar](https://github.com/jtelleriar), [&#x0040;julianstanley](https://github.com/julianstanley), [&#x0040;kdaily](https://github.com/kdaily), [&#x0040;maelle](https://github.com/maelle), [&#x0040;naomistrandberg](https://github.com/naomistrandberg), [&#x0040;psychometrician](https://github.com/psychometrician), [&#x0040;rainiercito](https://github.com/rainiercito), [&#x0040;ronniemo](https://github.com/ronniemo), [&#x0040;rpodcast](https://github.com/rpodcast), [&#x0040;sowla](https://github.com/sowla), [&#x0040;tellyshia](https://github.com/tellyshia), [&#x0040;ukyouhanDVSA](https://github.com/ukyouhanDVSA), [&#x0040;xari](https://github.com/xari), and [&#x0040;xvrdm](https://github.com/xvrdm).
+[&#x0040;aicesan](https://github.com/aicesan), [&#x0040;allaway](https://github.com/allaway), [&#x0040;andreferraribr](https://github.com/andreferraribr), [&#x0040;ardeeshany](https://github.com/ardeeshany), [&#x0040;aronolof](https://github.com/aronolof), [&#x0040;BenjaminLouis](https://github.com/BenjaminLouis), [&#x0040;bstrain71](https://github.com/bstrain71), [&#x0040;cedricbriandgithub](https://github.com/cedricbriandgithub), [&#x0040;ColinFay](https://github.com/ColinFay), [&#x0040;coreyyanofsky](https://github.com/coreyyanofsky), [&#x0040;dA505819](https://github.com/dA505819), [&#x0040;dan-reznik](https://github.com/dan-reznik), [&#x0040;davidpb90](https://github.com/davidpb90), [&#x0040;denrou](https://github.com/denrou), [&#x0040;DianeBeldame](https://github.com/DianeBeldame), [&#x0040;Dschaykib](https://github.com/Dschaykib), [&#x0040;ehesch](https://github.com/ehesch), [&#x0040;eroten](https://github.com/eroten), [&#x0040;espinielli](https://github.com/espinielli), [&#x0040;etiennebacher](https://github.com/etiennebacher), [&#x0040;fBedecarrats](https://github.com/fBedecarrats), [&#x0040;flrd](https://github.com/flrd), [&#x0040;frankschmitt](https://github.com/frankschmitt), [&#x0040;FrieseWoudloper](https://github.com/FrieseWoudloper), [&#x0040;giocomai](https://github.com/giocomai), [&#x0040;gowachin](https://github.com/gowachin), [&#x0040;graue70](https://github.com/graue70), [&#x0040;Guillaume-Lombardo](https://github.com/Guillaume-Lombardo), [&#x0040;gwd999](https://github.com/gwd999), [&#x0040;hadley](https://github.com/hadley), [&#x0040;hsm207](https://github.com/hsm207), [&#x0040;jamespooley](https://github.com/jamespooley), [&#x0040;jcrodriguez1989](https://github.com/jcrodriguez1989), [&#x0040;jonmcalder](https://github.com/jonmcalder), [&#x0040;josbop](https://github.com/josbop), [&#x0040;jpmarindiaz](https://github.com/jpmarindiaz), [&#x0040;jtelleriar](https://github.com/jtelleriar), [&#x0040;julianstanley](https://github.com/julianstanley), [&#x0040;kdaily](https://github.com/kdaily), [&#x0040;maelle](https://github.com/maelle), [&#x0040;mayeulk](https://github.com/mayeulk), [&#x0040;naomistrandberg](https://github.com/naomistrandberg), [&#x0040;psychometrician](https://github.com/psychometrician), [&#x0040;rainiercito](https://github.com/rainiercito), [&#x0040;ronniemo](https://github.com/ronniemo), [&#x0040;rpodcast](https://github.com/rpodcast), [&#x0040;sowla](https://github.com/sowla), [&#x0040;statnmap](https://github.com/statnmap), [&#x0040;tellyshia](https://github.com/tellyshia), [&#x0040;ukyouhanDVSA](https://github.com/ukyouhanDVSA), [&#x0040;VincentGuyader](https://github.com/VincentGuyader), [&#x0040;xari](https://github.com/xari), and [&#x0040;xvrdm](https://github.com/xvrdm).
 
 ```{r index-4, include = FALSE}
 # Some internal funs
